flex 사용해서 가로 정렬 완료

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="wrapper">
       <section class="main">
         <div class="chat-wrapper">
+          <img class="profile-img" src="images/profile.png" alt="">
           <div class="bubble">
-            <img class="profile-img" src="images/profile.png" alt="">
+            <h1>Glenn Lee</h1>
             <p>
-              Glenn Lee
               프론트엔드의 세계에 오신 여러분들 환영 합니다.
               여러분들을 응원하고 돕것슴다이잉! 🫣
             </p>
@@ -22,10 +22,12 @@
         </div>
         <div class="chat-wrapper">
           <img class="profile-img" src="images/lucky.png" alt="">
+          <div class="bubble">
+          <h1>프론트엔드 새싹</h1>
           <p>
-            프론트엔드 새싹
             누구... 신디요?
           </p>
+          </div>
         </div>
       </section>
       <section class="footer">
