footer에서 퇴장 메시지 출력 거의 완성

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </div>
       </section>
       <section class="footer">
-        123
+        <p class="dummy"></p>
+        <p class="out-log">Glenn Lee 님이 퇴장 하셨습니다.</p>
+        <p class="dummy"></p>
       </section>
     </div>
 
