--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Chatbot</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <section class="main">
-        <div class="chat-wrapper">
-          <img class="profile-img" src="images/profile.png" alt="">
-          <div class="bubble">
-            <h1>Glenn Lee</h1>
-            <p>
-              프론트엔드의 세계에 오신 여러분들 환영 합니다.
-              여러분들을 응원하고 돕것슴다이잉! 🫣
-            </p>
-          </div>
+
+<head>
+  <title>Chatbot</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="wrapper">
+    <section class="main">
+      <div class="chat-wrapper">
+        <img class="profile-img" src="images/profile.png" alt="">
+        <div class="bubble">
+          <h1 class="name first">Glenn Lee</h1>
+          <p class="message">
+            프론트엔드의 세계에 오신 여러분들 환영 합니다.<br>
+            여러분들을 응원하고 돕것슴다이잉! 🫣
+          </p>
         </div>
-        <div class="chat-wrapper">
-          <img class="profile-img" src="images/lucky.png" alt="">
-          <div class="bubble">
-          <h1>프론트엔드 새싹</h1>
-          <p>
+      </div>
+      <div class="chat-wrapper reverse">
+        <img class="profile-img" src="images/lucky.png" alt="">
+        <div class="bubble-second">
+          <h1 class="name second">프론트엔드 새싹</h1>
+          <p class="message">
             누구... 신디요?
           </p>
-          </div>
         </div>
-      </section>
-      <section class="footer">
-        <p class="dummy"></p>
-        <p class="out-log">Glenn Lee 님이 퇴장 하셨습니다.</p>
-        <p class="dummy"></p>
-      </section>
-    </div>
+      </div>
+    </section>
+    <section class="footer">
+      <p class="dummy"></p>
+      <p class="out-log">Glenn Lee 님이 퇴장 하셨습니다.</p>
+      <p class="dummy"></p>
+    </section>
+  </div>
 
-  </body>
+</body>
+
 </html>
